cluster/apps/media/jellyfin/external-name.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-media-sparks-codes
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: media.sparks.codes
spec:
  type: ExternalName
  externalName: sparks.codes
