cluster/apps/media/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-internal
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: &host media.sparks.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - *host
      secretName: acme-crt-secret-sparks-codes
